--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <div id="nav">
         <div id="lolo">
-            <div id="logo-div"> <img id="aws-log"
-                    src="/Colors-Amazon-Logo.jpg" />
+            <div id="logo-div"> <img id="aws-log" src="/Colors-Amazon-Logo.jpg" />
             </div>
             <div id="loc-div">
                 <i class="fa-solid fa-location-dot fa-lg"></i>
@@ -58,7 +57,22 @@
             </div>
         </div>
     </div>
-
+    <div id="below-nav">
+        <div id="LineBar">
+            <i class="fa-solid fa-bars fa-lg"></i>
+            <span>All</span>
+        </div>
+        <div id="dealsBar">
+            <span class="LineBar-name">Today`s Deals</Span>
+                <span class="LineBar-name">Customer Service</Span>
+                <span class="LineBar-name">Registry</Span>
+                <span class="LineBar-name">Gift Cards</Span>
+                <span class="LineBar-name">Sell</Span>
+        </div>
+        <div id="onlyEleDeal">
+            <div id="inElDeal">Shop deals in Electronics</div>
+        </div>
+    </div>
 </body>
 
 </html>
