--- a/index.html
+++ b/index.html
@@ -64,15 +64,273 @@
         </div>
         <div id="dealsBar">
             <span class="LineBar-name">Today`s Deals</Span>
-                <span class="LineBar-name">Customer Service</Span>
-                <span class="LineBar-name">Registry</Span>
-                <span class="LineBar-name">Gift Cards</Span>
-                <span class="LineBar-name">Sell</Span>
+            <span class="LineBar-name">Customer Service</Span>
+            <span class="LineBar-name">Registry</Span>
+            <span class="LineBar-name">Gift Cards</Span>
+            <span class="LineBar-name">Sell</Span>
         </div>
         <div id="onlyEleDeal">
             <div id="inElDeal">Shop deals in Electronics</div>
         </div>
     </div>
+    <div id="bg-add">
+        <img src="https://m.media-amazon.com/images/I/610NTFOyhAL._SX3000_.jpg" />
+    </div>
+    <div id="large-div">
+        <!-- used for making inner box  -->
+        <div class="comparment">
+            <!-- to place heading in  -->
+            <h2 class="headName">Up to 60% off | Styles for men</h2>
+            <!-- it is to make outer compart for making it to divs  -->
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Fashion/Gateway/BAU/BTF-Refresh/May/PF_MF/MF-1-186-116._SY116_CB636110853_.jpg" />
+                    <p class="i-descri">Clothing</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Fashion/Gateway/BAU/BTF-Refresh/May/PF_MF/MF-2-186-116._SY116_CB636110853_.jpg" />
+                    <p class="i-descri">footwear</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Fashion/Gateway/BAU/BTF-Refresh/May/PF_MF/MF-3-186-116._SY116_CB636110853_.jpg" />
+                    <p class="i-descri">Watches</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Fashion/Gateway/BAU/BTF-Refresh/May/PF_MF/MF-4-186-116._SY116_CB636110853_.jpg" />
+                    <p class="i-descri">Bags & Luggages</p>
+                </div>
+            </div>
+            <p class="foot-text">See all offers</p>
+        </div>
+        <div class="comparment">
+            <!-- to place heading in  -->
+            <h2 class="headName">Book travel tickets and get exciting offers</h2>
+            <!-- it is to make outer compart for making it to divs  -->
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/AmazonPay/Flights/Flight_186x116._SY116_CB613655434_.jpg" />
+                    <p class="i-descri">Get up to ₹2000 off + 2% back on flights</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/AmazonPay/Flights/Train_186x116._SY116_CB613655434_.jpg" />
+                    <p class="i-descri">Zero payment gateway charges</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/AmazonPay/Flights/Bus_186x116._SY116_CB613655434_.jpg" />
+                    <p class="i-descri">Get flat 10% back on bus tickets</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/AmazonPay/Flights/Accessory_186x116._SY116_CB613655434_.jpg" />
+                    <p class="i-descri">Products for your travel needs</p>
+                </div>
+            </div>
+            <p class="foot-text">See all offers</p>
+        </div>
+        <div class="comparment">
+            <!-- to place heading in  -->
+            <h2 class="headName">Up to 70% off | Clearance store</h2>
+            <!-- it is to make outer compart for making it to divs  -->
+            <div class="bigger-i-box">
+                <img class="bigger-i-pic"
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Electronics/Clearance/Clearance_store_Desktop_CC_1x._SY304_CB628315133_.jpg" />
+            </div>
+            <p class="foot-text">see more</p>
+        </div>
+        <div class="comparment">
+            <div class="smaller-com">
+                <h3 class="headName">Sign in for your best<br> experience</h3>
+                <div class="yel-sign">Sign in securely</div>
+            </div>
+            <img class="add-pic"
+                src="https://m.media-amazon.com/images/G/31/img19/AMS/Houseads/Laptops-Sept2019._CB436595915_.jpg" />
+        </div>
+    </div>
+    <div id="large-divChain">
+        <div class="comparment">
+            <h2 class="headName">Starting ₹87 | Amazon Brands & more</h2>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/home_private_label/moritika/baugwsept/xcm_banners_tile2-kitchen_186x116_in-en._SY116_CB612501062_.jpg" />
+                    <p class="i-descri">Starting ₹149 | Choppers & more</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/home_private_label/moritika/baugwsept/xcm_banners_tile3-home_186x116_in-en._SY116_CB612501076_.jpg" />
+                    <p class="i-descri">Starting ₹87 | String lights & more</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/home_private_label/moritika/baugwsept/xcm_banners_tile1-kitchen_186x116_in-en._SY116_CB595325189_.jpg" />
+                    <p class="i-descri">Starting ₹239 | Kitchen storage & containers</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/home_private_label/moritika/baugwsept/xcm_banners_tile4-home_186x116_in-en._SY116_CB612501080_.jpg" />
+                    <p class="i-descri">Starting ₹189 | Wall stickers & more</p>
+                </div>
+            </div>
+            <p class="foot-text">Shop now</p>
+        </div>
+        <div class="comparment">
+            <h2 class="headName">Automotive essentials | Up to 60% off</h2>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Auto/2020/GW/PCQC/Glasscare1X._SY116_CB410830553_.jpg" />
+                    <p class="i-descri">Cleaning accessories</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Auto/2020/GW/PCQC/Rim_tyrecare1x._SY116_CB410830552_.jpg" />
+                    <p class="i-descri">Tyre & rim care</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Auto/2020/GW/PCQC/Vega_helmet_186x116._SY116_CB405090404_.jpg" />
+                    <p class="i-descri">Helmets</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Auto/2020/GW/PCQC/Vaccum1x._SY116_CB410830552_.jpg" />
+                    <p class="i-descri">Vacuum cleaner</p>
+                </div>
+            </div>
+            <p class="foot-text">See more</p>
+        </div>
+        <div class="comparment">
+            <h2 class="headName">Up to 60% off | Professional tools, testing & more</h2>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Biss/2018/QC/Tools1x._SY116_CB424026090_.jpg" />
+                    <p class="i-descri">Professional tools</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Biss/2021/BAU_GW_Graphics/PCQC/2._SY116_CB643952439_.jpg" />
+                    <p class="i-descri">Measuring instruments</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Biss/2021/BAU_GW_Graphics/PCQC/1._SY116_CB643952439_.jpg" />
+                    <p class="i-descri">Cleaning supplies</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img17/Biss/2018/QC/med1x._SY116_CB424026091_.jpg" />
+                    <p class="i-descri">Medical supplies</p>
+                </div>
+            </div>
+            <p class="foot-text">See More</p>
+        </div>
+        <div class="comparment">
+            <h2 class="headName">Revamp your home in style</h2>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2021/GW/MSO/April/372x232_1_Low._SY116_CB670263840_.jpg" />
+                    <p class="i-descri">Bedsheets, curtains & more</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2021/GW/MSO/April/372x232_2_Low._SY116_CB670263840_.jpg" />
+                    <p class="i-descri">Home decoration</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2021/GW/MSO/April/372x232_3_Low._SY116_CB670263840_.jpg" />
+                    <p class="i-descri">Home storage</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2021/GW/MSO/April/372x232_4_Low._SY116_CB670263840_.jpg" />
+                    <p class="i-descri">Lighting solutions</p>
+                </div>
+            </div>
+            <p class="foot-text">Explore all</p>
+        </div>
+    </div>
+    <div class="singleRow">
+        <div class="rowTitle-div">
+            <h2 class="rowTitle">Today`s deals</h2>
+            <span>See all deals</span>
+        </div>
+        <div class="divAlign-row">
+            <div class="eachItem">
+                <div class="eachItem-pic-div">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/41-+itFyZlL._AC_SY200_.jpg" />
+                </div>
+                <span class="red-box">Upto 35% off</span><span class="text-red">Deal of the day</span><br>
+                <span class="eachItem-descrip">Grand Gaming Days - Game On with o…</span>
+            </div>
+            <div class="eachItem">
+                <div class="eachItem-pic-div">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/31G1NouVxaL._AC_SY200_.jpg" />
+                </div>
+                <span class="red-box">Upto 85% off</span><span class="text-red">Deal of the day</span><br>
+                <span class="eachItem-descrip">Blockbuster Deals on pTron Headsets</span>
+            </div>
+            <div class="eachItem">
+                <div class="eachItem-pic-div">
+                    <img class="eachItem-pic-other"
+                        src="https://m.media-amazon.com/images/I/410iWt8d79L._AC_SY200_.jpg" />
+                </div>
+                <span class="red-box">60% off</span><span class="text-red">Deal of the day</span><br>
+                <span class="pricing">&#8377 29,999.00</span><span class="newRate">M.R.P : <del>&#8377
+                        49,999.00</del></span><br>
+                <span class="eachItem-descrip">Best Deal on Samsung S20 FE 5G</span>
+            </div>
+            <div class="eachItem">
+                <div class="eachItem-pic-div">
+                    <img class="eachItem-pic-other1"
+                        src="https://m.media-amazon.com/images/I/61QQtY6qtHL._AC_SY200_.jpg" />
+                </div>
+                <span class="red-box">Upto 85% off</span><span class="text-red">Deal of the day</span><br>
+                <span class="eachItem-descrip">Levi's, Allen Solly, ANNI DESIGNER &…</span>
+            </div>
+            <div class="eachItem">
+                <div class="eachItem-pic-div">
+                    <img class="eachItem-pic-other" src="https://m.media-amazon.com/images/I/41vTzQLZgVL._AC_SY200_.jpg" />
+                </div>
+                <span class="red-box">23% off</span><span class="text-red">Deal of the day</span><br>
+                <span class="pricing">&#8377 39,999.00</span><span class="newRate">M.R.P : <del>&#8377
+                        51,999.00</del></span><br>
+                <span class="eachItem-descrip">
+                    Tecno Phantom X2, Starting ₹39999
+                </span>
+            </div>
+            <div class="eachItem-drag">
+                <div class="eachItem-pic-div">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/41P1DOw+R8L._AC_SY200_.jpg" />
+                </div>
+                <span class="red-box"></span><span class="text-red">Deal of the day</span><br>
+                <span class="eachItem-descrip"></span>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
