--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <img class="add-pic"
                 src="https://m.media-amazon.com/images/G/31/img19/AMS/Houseads/Laptops-Sept2019._CB436595915_.jpg" />
         </div>
-    </div>
+    </div><br>
     <div id="large-divChain">
         <div class="comparment">
             <h2 class="headName">Starting ₹87 | Amazon Brands & more</h2>
@@ -270,67 +270,156 @@
             </div>
             <p class="foot-text">Explore all</p>
         </div>
-    </div>
+    </div><br>
     <div class="singleRow">
         <div class="rowTitle-div">
             <h2 class="rowTitle">Today`s deals</h2>
             <span>See all deals</span>
         </div>
-        <div class="divAlign-row">
-            <div class="eachItem">
-                <div class="eachItem-pic-div">
-                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/41-+itFyZlL._AC_SY200_.jpg" />
+        <!-- to show hidden effect -->
+        <div class="before-divAlign-row">
+            <!-- to align items in div  -->
+            <div class="divAlign-row">
+                <div class="eachItem">
+                    <div class="eachItem-pic-div">
+                        <img class="eachItem-pic"
+                            src="https://m.media-amazon.com/images/I/41-+itFyZlL._AC_SY200_.jpg" />
+                    </div>
+                    <span class="red-box">Upto 35% off</span><span class="text-red">Deal of the day</span><br>
+                    <span class="eachItem-descrip">Grand Gaming Days - Game On with o…</span>
                 </div>
-                <span class="red-box">Upto 35% off</span><span class="text-red">Deal of the day</span><br>
-                <span class="eachItem-descrip">Grand Gaming Days - Game On with o…</span>
-            </div>
-            <div class="eachItem">
-                <div class="eachItem-pic-div">
-                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/31G1NouVxaL._AC_SY200_.jpg" />
+                <div class="eachItem">
+                    <div class="eachItem-pic-div">
+                        <img class="eachItem-pic"
+                            src="https://m.media-amazon.com/images/I/31G1NouVxaL._AC_SY200_.jpg" />
+                    </div>
+                    <span class="red-box">Upto 85% off</span><span class="text-red">Deal of the day</span><br>
+                    <span class="eachItem-descrip">Blockbuster Deals on pTron Headsets</span>
                 </div>
-                <span class="red-box">Upto 85% off</span><span class="text-red">Deal of the day</span><br>
-                <span class="eachItem-descrip">Blockbuster Deals on pTron Headsets</span>
-            </div>
-            <div class="eachItem">
-                <div class="eachItem-pic-div">
-                    <img class="eachItem-pic-other"
-                        src="https://m.media-amazon.com/images/I/410iWt8d79L._AC_SY200_.jpg" />
+                <div class="eachItem">
+                    <div class="eachItem-pic-div">
+                        <img class="eachItem-pic-other"
+                            src="https://m.media-amazon.com/images/I/410iWt8d79L._AC_SY200_.jpg" />
+                    </div>
+                    <span class="red-box">60% off</span><span class="text-red">Deal of the day</span><br>
+                    <span class="pricing">&#8377 29,999.00</span><span class="newRate">M.R.P : <del>&#8377
+                            49,999.00</del></span><br>
+                    <span class="eachItem-descrip">Best Deal on Samsung S20 FE 5G</span>
                 </div>
-                <span class="red-box">60% off</span><span class="text-red">Deal of the day</span><br>
-                <span class="pricing">&#8377 29,999.00</span><span class="newRate">M.R.P : <del>&#8377
-                        49,999.00</del></span><br>
-                <span class="eachItem-descrip">Best Deal on Samsung S20 FE 5G</span>
-            </div>
-            <div class="eachItem">
-                <div class="eachItem-pic-div">
-                    <img class="eachItem-pic-other1"
-                        src="https://m.media-amazon.com/images/I/61QQtY6qtHL._AC_SY200_.jpg" />
+                <div class="eachItem">
+                    <div class="eachItem-pic-div">
+                        <img class="eachItem-pic-other1"
+                            src="https://m.media-amazon.com/images/I/61QQtY6qtHL._AC_SY200_.jpg" />
+                    </div>
+                    <span class="red-box">Upto 85% off</span><span class="text-red">Deal of the day</span><br>
+                    <span class="eachItem-descrip">Levi's, Allen Solly, ANNI DESIGNER &…</span>
                 </div>
-                <span class="red-box">Upto 85% off</span><span class="text-red">Deal of the day</span><br>
-                <span class="eachItem-descrip">Levi's, Allen Solly, ANNI DESIGNER &…</span>
-            </div>
-            <div class="eachItem">
-                <div class="eachItem-pic-div">
-                    <img class="eachItem-pic-other" src="https://m.media-amazon.com/images/I/41vTzQLZgVL._AC_SY200_.jpg" />
+                <div class="eachItem">
+                    <div class="eachItem-pic-div">
+                        <img class="eachItem-pic-other"
+                            src="https://m.media-amazon.com/images/I/41vTzQLZgVL._AC_SY200_.jpg" />
+                    </div>
+                    <span class="red-box">23% off</span><span class="text-red">Deal of the day</span><br>
+                    <span class="pricing">&#8377 39,999.00</span><span class="newRate">M.R.P : <del>&#8377
+                            51,999.00</del></span><br>
+                    <span class="eachItem-descrip">
+                        Tecno Phantom X2, Starting ₹39999
+                    </span>
                 </div>
-                <span class="red-box">23% off</span><span class="text-red">Deal of the day</span><br>
-                <span class="pricing">&#8377 39,999.00</span><span class="newRate">M.R.P : <del>&#8377
-                        51,999.00</del></span><br>
-                <span class="eachItem-descrip">
-                    Tecno Phantom X2, Starting ₹39999
-                </span>
-            </div>
-            <div class="eachItem-drag">
-                <div class="eachItem-pic-div">
-                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/41P1DOw+R8L._AC_SY200_.jpg" />
+                <div class="eachItem">
+                    <div class="eachItem-pic-div">
+                        <img class="eachItem-pic-phone"
+                            src="https://m.media-amazon.com/images/I/41ckHFjzfXL._AC_SY200_.jpg" />
+                    </div>
+                    <span class="red-box">33% off</span><span class="text-red">Deal of the day</span><br>
+                    <span class="pricing">&#8377 5,999.00</span><span class="newRate">M.R.P : <del>&#8377
+                            8,999.00</del></span><br>
+                    <span class="eachItem-descrip">Nokia C12, Launch Price 5999/-</span>
                 </div>
-                <span class="red-box"></span><span class="text-red">Deal of the day</span><br>
-                <span class="eachItem-descrip"></span>
+                <div class="next-div">
+                    <p class="greaterThan">&gt</p>
+                </div>
+
             </div>
         </div>
+    </div><br>
+    <div class="show-pic-items">
+        <div class="rowTitle-div">
+            <h2 class="rowTitle">Up to 60% off | Curated furniture picks for your home</h2>
+            <span>Visit the store</span>
+        </div>
+        <div class="prev-div">
+            <p class="greaterThan">&#60</p>
+        </div>
+        <div class="before-divAlign-row">
+            <div class="divAlign-row">
 
+                <div class="eachItem">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/71RpTYfbRiL._AC_SY200_.jpg" />
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/81uJOXAfODL._AC_SY200_.jpg" />
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/71Ar15Ki1jL._AC_SY200_.jpg" />
+
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/51cf92qyyAS._AC_SY200_.jpg" />
+
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/51eYerc4PRS._AC_SY200_.jpg" />
+
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/71w2Uk3F3aL._AC_SY200_.jpg" />
+
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src="https://m.media-amazon.com/images/I/71gqs-m95EL._AC_SY200_.jpg" />
+
+                </div>
+                <div class="next-div">
+                    <p class="greaterThan">&gt</p>
+                </div>
+            </div>
+        </div>
+    </div><br>
+    <div class="show-pic-items">
+        <div class="rowTitle-div">
+            <h2 class="rowTitle"></h2>
+            <span>See all deals</span>
+        </div>
+        <div class="prev-div">
+            <p class="greaterThan">&#60</p>
+        </div>
+        <div class="before-divAlign-row">
+            <div class="divAlign-row">
+                <div class="eachItem">
+                    <img class="eachItem-pic" src=""/>
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src=""/>
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src=""/>
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src=""/>
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src=""/>
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src=""/>
+                </div>
+                <div class="eachItem">
+                    <img class="eachItem-pic" src=""/>
+                </div>
+            </div>
+        </div>
     </div>
-
 </body>
 
 </html>
