--- a/index.html
+++ b/index.html
@@ -388,34 +388,34 @@
     </div><br>
     <div class="show-pic-items">
         <div class="rowTitle-div">
-            <h2 class="rowTitle"></h2>
+            <h2 class="rowTitle">Related to items you've viewed</h2>
             <span>See all deals</span>
         </div>
         <div class="prev-div">
             <p class="greaterThan">&#60</p>
         </div>
         <div class="before-divAlign-row">
-            <div class="divAlign-row">
-                <div class="eachItem">
-                    <img class="eachItem-pic" src=""/>
+            <div class="divAlign-row-big">
+                <div class="eachItem-big">
+                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/51E5mNQzmUL._AC_SY200_.jpg"/>
                 </div>
-                <div class="eachItem">
-                    <img class="eachItem-pic" src=""/>
+                <div class="eachItem-big">
+                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/61G29EjpsTL._AC_SY200_.jpg"/>
                 </div>
-                <div class="eachItem">
-                    <img class="eachItem-pic" src=""/>
+                <div class="eachItem-big">
+                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/51ED-8GIw9L._AC_SY200_.jpg"/>
                 </div>
-                <div class="eachItem">
-                    <img class="eachItem-pic" src=""/>
+                <div class="eachItem-big">
+                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/71aJ5xKHwML._AC_SY200_.jpg"/>
                 </div>
-                <div class="eachItem">
-                    <img class="eachItem-pic" src=""/>
+                <div class="eachItem-big">
+                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/71gqs-m95EL._AC_SY200_.jpg"/>
                 </div>
-                <div class="eachItem">
-                    <img class="eachItem-pic" src=""/>
+                <div class="eachItem-big">
+                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/414hwfJEyaL._AC_SY200_.jpg"/>
                 </div>
-                <div class="eachItem">
-                    <img class="eachItem-pic" src=""/>
+                <div class="next-div">
+                    <p class="greaterThan">&gt</p>
                 </div>
             </div>
         </div>
