--- a/index.html
+++ b/index.html
@@ -397,27 +397,144 @@
         <div class="before-divAlign-row">
             <div class="divAlign-row-big">
                 <div class="eachItem-big">
-                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/51E5mNQzmUL._AC_SY200_.jpg"/>
+                    <img class="eachItem-pic-moreBig"
+                        src="https://m.media-amazon.com/images/I/51E5mNQzmUL._AC_SY200_.jpg" />
                 </div>
                 <div class="eachItem-big">
-                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/61G29EjpsTL._AC_SY200_.jpg"/>
+                    <img class="eachItem-pic-moreBig"
+                        src="https://m.media-amazon.com/images/I/61G29EjpsTL._AC_SY200_.jpg" />
                 </div>
                 <div class="eachItem-big">
-                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/51ED-8GIw9L._AC_SY200_.jpg"/>
+                    <img class="eachItem-pic-moreBig"
+                        src="https://m.media-amazon.com/images/I/51ED-8GIw9L._AC_SY200_.jpg" />
                 </div>
                 <div class="eachItem-big">
-                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/71aJ5xKHwML._AC_SY200_.jpg"/>
+                    <img class="eachItem-pic-moreBig"
+                        src="https://m.media-amazon.com/images/I/71aJ5xKHwML._AC_SY200_.jpg" />
                 </div>
                 <div class="eachItem-big">
-                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/71gqs-m95EL._AC_SY200_.jpg"/>
+                    <img class="eachItem-pic-moreBig"
+                        src="https://m.media-amazon.com/images/I/71gqs-m95EL._AC_SY200_.jpg" />
                 </div>
                 <div class="eachItem-big">
-                    <img class="eachItem-pic-moreBig" src="https://m.media-amazon.com/images/I/414hwfJEyaL._AC_SY200_.jpg"/>
+                    <img class="eachItem-pic-moreBig"
+                        src="https://m.media-amazon.com/images/I/414hwfJEyaL._AC_SY200_.jpg" />
                 </div>
                 <div class="next-div">
                     <p class="greaterThan">&gt</p>
                 </div>
             </div>
+        </div>
+    </div><br>
+    <div class="large-divChain-other">
+        <div class="comparment">
+            <h2 class="headName">Bestsellers in Women's Indian Clothing</h2>
+            <div class="eachItem-pic-div">
+                <img class="seprate-pic" src="https://m.media-amazon.com/images/I/81rTa+xpERL._AC_SY175_.jpg" />
+            </div>
+            <span class="eachItem-descrip">Vaamsi Women's Cotton Blend Printed Kurta Set with Dupatta
+                (VKSKD1238_Blue)</span><br>
+            <span class="pricing">&#8377 679 <sup>00</sup> </span><span class="newRate">M.R.P : <del>&#8377
+                    8,999.00</del></span>
+            <div class="small-align-div">
+                <div class="small-show">
+                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/81rTa+xpERL._AC_SY55_.jpg"/>
+                </div>
+                <div class="small-show">
+                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/71ntNcW3OhL._AC_SY55_.jpg"/>
+                </div>
+                <div class="small-show">
+                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/51l0DAV0HSL._AC_SY55_.jpg"/>
+                </div>
+                <div class="small-show">
+                    <img class="small-show-pic-edit" src="https://m.media-amazon.com/images/I/617RNsoETPL._AC_SY55_.jpg"/>
+                </div>
+            </div>
+
+        </div>
+        <div class="comparment">
+            <h2 class="headName">Minimum 50% off | Top styles for her</h2>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img2020/img21/kids/WRS_Dec22/PC_QC/WA/1_1X._SY116_CB618751254_.jpg" />
+                    <p class="i-descri">Allen Solly, Fort Collins & more</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img2020/img21/kids/WRS_Dec22/PC_QC/WA/2_1X._SY116_CB618751254_.jpg" />
+                    <p class="i-descri">Biba, Aurelia & more</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img2020/img21/kids/WRS_Dec22/PC_QC/WA/3_1X._SY116_CB618751254_.jpg" />
+                    <p class="i-descri">Womanista, Mimosa & more</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img2020/img21/kids/WRS_Dec22/PC_QC/WA/4_1X._SY116_CB618751254_.jpg" />
+                    <p class="i-descri">Harpa, Only & more</p>
+                </div>
+            </div>
+            <p class="foot-text">See all deals</p>
+        </div>
+        <div class="comparment">
+            <h2 class="headName">Try Prime today</h2>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/prime/ACQ/PC_QuadCard_186X116-1._SY116_CB616375594_.jpg" />
+                    <p class="i-descri">FREE one delivery</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/prime/ACQ/PC_QuadCard_186X116-2._SY116_CB616375594_.jpg" />
+                    <p class="i-descri">Latest movies and TV shows</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/prime/ACQ/PC_QuadCard_186X116-3._SY116_CB616375594_.jpg" />
+                    <p class="i-descri">Ad-free music</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/prime/ACQ/PC_QuadCard_186X116-4._SY116_CB616375594_.jpg" />
+                    <p class="i-descri">Get unlimited 5% cashback on shopping</p>
+                </div>
+            </div>
+            <p class="foot-text">Enjoy all the benefits of Prime</p>
+        </div>
+        <div class="comparment">
+            <h2 class="headName">Essentials for Expecting Mothers</h2>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img20/Events/Schoolfromhome/PCQC/Pregnancy_Supplements._SY116_CB667651395_.jpg" />
+                    <p class="i-descri">Pregnancy supplements</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img20/Events/Schoolfromhome/PCQC/Maternity_Sleep__Loungewear._SY116_CB667651395_.jpg" />
+                    <p class="i-descri">Maternity Sleep & Loungewear</p>
+                </div>
+            </div>
+            <div class="show-cat">
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img20/Events/Schoolfromhome/PCQC/Maternity_pillows._SY116_CB667651395_.jpg" />
+                    <p class="i-descri">Maternity pillows</p>
+                </div>
+                <div class="i-box">
+                    <img class="i-pic"
+                        src="https://images-eu.ssl-images-amazon.com/images/G/31/img20/Events/Schoolfromhome/PCQC/Maternity_Skin_care._SY116_CB667651395_.jpg" />
+                    <p class="i-descri">Maternity Skin care</p>
+                </div>
+            </div>
+            <p class="foot-text">See more</p>
         </div>
     </div>
 </body>
