--- a/index.html
+++ b/index.html
@@ -438,16 +438,17 @@
                     8,999.00</del></span>
             <div class="small-align-div">
                 <div class="small-show">
-                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/81rTa+xpERL._AC_SY55_.jpg"/>
+                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/81rTa+xpERL._AC_SY55_.jpg" />
                 </div>
                 <div class="small-show">
-                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/71ntNcW3OhL._AC_SY55_.jpg"/>
+                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/71ntNcW3OhL._AC_SY55_.jpg" />
                 </div>
                 <div class="small-show">
-                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/51l0DAV0HSL._AC_SY55_.jpg"/>
+                    <img class="small-show-pic" src="https://m.media-amazon.com/images/I/51l0DAV0HSL._AC_SY55_.jpg" />
                 </div>
                 <div class="small-show">
-                    <img class="small-show-pic-edit" src="https://m.media-amazon.com/images/I/617RNsoETPL._AC_SY55_.jpg"/>
+                    <img class="small-show-pic-edit"
+                        src="https://m.media-amazon.com/images/I/617RNsoETPL._AC_SY55_.jpg" />
                 </div>
             </div>
 
@@ -535,6 +536,32 @@
                 </div>
             </div>
             <p class="foot-text">See more</p>
+        </div>
+    </div><br>
+    <div class="last-outline">
+        <div class="last-head-sec">
+            <h3 class="last-headtag">Customers who viewed items in your browsing history also viewed</h3>
+            <p class="last-pTag">page 1 of 6</p>
+        </div>
+        <div class="inner-aligner-div">
+            <div class="forprevNext">
+                <div class="toMakenext">&#60</div>
+            </div>
+            <div class="div-to-arrrange-show-items">
+                <div class="show-item-inner">
+                    <div class=""></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="forprevNext">
+                <div class="toMakenext">&gt</div>
+            </div>
         </div>
     </div>
 </body>
