--- a/index.html
+++ b/index.html
@@ -549,14 +549,115 @@
             </div>
             <div class="div-to-arrrange-show-items">
                 <div class="show-item-inner">
-                    <div class=""></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/51cf92qyyAS._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">ES ESPINHO Maddison Solid Sal Wood Fabric Upholstered 3 Seater Right
+                            Hand Side Facing
+                            Modular, Sectional, Corner L Shape Sofa</span>
+                        <div class="star-div"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class='fa fa-star-half-full'></i> 1</div>
+                        <span class="twoOff">2 offers from</span> <b>&#8377 40.708.00</b>
+                    </div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/51eYerc4PRS._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">ES ESPINHO ESPN0012 Solid Sal Wood Leatherette Upholstered Button
+                            Tufted Chesterfield 3 Seater Sofa Set for Living Room, Brow</span>
+                        <div class="star-div"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i> 12</div>
+                        <span class="twoOff">2 offers from</span><b>&#8377 26,115.00</b>
+                    </div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/71Ar15Ki1jL._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">TANUJ Wood MART Solid Sheesham Wood 4 Seater Dining Table Set Dining
+                            Table with 4 Cushion Chairs Dinner Table for Dining Room</span>
+                        <div class="star-div"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i> 3</div>
+                        <div class="deliveryExpect">
+                            <b>&#8377 20,999.00</b><br>
+                            <span>Get it <b>Apr 6-7</b></span><br>
+                            <span>FREE Delivery</span><br>
+                            <span>Usually dispatched in 4 to 5 days</span>
+                        </div>
+                    </div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/71w2Uk3F3aL._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">SARSWATI FURNITURE Sheesham Wood Dining Table 6 Seater | Wooden
+                            Dining Room Furniture | 6 Chairs with Cushions | Rusty Teak F</span>
+                        <div class="star-div">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class='fa fa-star-half-full'></i>
+                            <i class="fa-regular fa-star"></i> 50
+                        </div>
+                        <div class="deliveryExpect">
+                            <b>&#8377 25,999.00</b><br>
+                            <span>Get it <b>31 Mar - 4 Apr</b></span><br>
+                            <span>FREE Delivery</span><br>
+                        </div>
+                    </div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/61AVMkuN+BL._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">FURNITURE HUB Study Table Home Office 2 Drawer Laptop Computer
+                            Living Room Wood Table, Writing Desk for Home and Office Made </span>
+                        <div class="star-div"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-regular fa-star"></i> 34</div>
+                        <span class="twoOff">2 offers from</span> <b>&#8377 8,369.00</b>
+                    </div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/71RpTYfbRiL._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">Natural Finish Solid Sheesham Wood 6 Seater Dining Table with 6
+                            Chairs for Home & Office | Hotel & Restaurant| Honey Finish</span>
+                        <div class="star-div"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class='fa fa-star-half-full'></i> 19</div>
+                        <div class="deliveryExpect">
+                            <span class="red-box">33% off</span><span class="text-red">Deal of the day</span><br>
+                            <span class="pricing">&#8377 27,166.00</span><span class="newRate">M.R.P : <del>&#8377
+                                    59,650.00</del></span><br>
+                            <span>Get it <b>31 Mar 28 - 31</b></span><br>
+                            <span>FREE Delivery</span><br>
+                            <span>Usually dispatched in 4 to 5 days</span>
+                        </div>
+
+                    </div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/51Mk0CHXvUL._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">The Earth Store 'Glam Studio' Coffee Mug Set of 2 Ceramic Mugs to
+                            Gift to Best Friend Tea Mugs Coffee Mugs Microwave Safe Cof</span>
+                        <div class="star-div"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-regular fa-star"></i> 2,654</div>
+                        <div class="deliveryExpect">
+                            <span class="red-box">42% off</span><span class="text-red">Deal of the day</span><br>
+                            <span class="pricing">&#8377 489.00</span><br><span class="newRate">M.R.P : <del>&#8377
+                                    849.00</del></span><br>
+                            <span>Get it <b>Thursday March 23</b></span><br>
+                        </div>
+                    </div>
+                    <div class="last-inner-div">
+                        <img class="sofa-pics"
+                            src="https://images-eu.ssl-images-amazon.com/images/I/51E5mNQzmUL._AC_UL160_SR160,160_.jpg" />
+                        <span class="last-sofa-des">Casaliving Corso 4 Seater L Shape Sofa Set for Living Room (Cream)
+                            Right Side</span>
+                        <div class="deliveryExpect">
+                            <span class="red-box">82% off</span><span class="text-red">Deal</span><br>
+                            <span class="pricing">&#8377 15,000.00</span><br><span class="newRate">M.R.P : <del>&#8377
+                                    84,999.00</del></span><br>
+                            <span>FREE Delivery</span><br>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="forprevNext">
