--- a/index.html
+++ b/index.html
@@ -666,5 +666,87 @@
         </div>
     </div>
 </body>
+<footer>
+    <div id="signin-reminder">
+        <div id="sig-div">
+            <span>See personalized recommendations</span>
+            <div id="sig-box">Sign in</div>
+            <span>New customer &#63 <a href="">Start here</a></span>
+        </div>
+    </div>
+    <br>
+    <div id="back">
+        <a href="">Back to top</a>
+    </div>
+    <div id="outter-con">
+        <div id="align-con">
+            <div class="connect-us">
+                <h3>Get to Know Us</h3>
+                <li>About us</li>
+                <li>Careers</li>
+                <li>Press Releases</li>
+                <li>Amazon Science</li>
+            </div>
+            <div class="connect-us">
+                <h3>Connect with Us</h3>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+
+            </div>
+            <div class="connect-us">
+                <h3>Make Money with Us</h3>
+                <li>Sell on Amazon</li>
+                <li>Sell under Amazon Accelerator</li>
+                <li>Protect and Build Your Brand</li>
+                <li>Amazon Global Selling</li>
+                <li>Become an Affiliate</li>
+                <li>Fulfilment by Amazon</li>
+                <li>Advertise Your Products</li>
+                <li>Amazon Pay on Merchants</li>
+            </div>
+            <div class="connect-us">
+                <h3>Let Us Help You</h3>
+                <li>COVID-19 and Amazon</li>
+                <li>Your Account</li>
+                <li>Returns Centre</li>
+                <li>100% Purchase Protection</li>
+                <li>Amazon App Download</li>
+                <li>Help</li>
+            </div>
+        </div>
+        <div id="secondLast-align-con">
+<div id="sym-lang">
+    <img src="/Colors-Amazon-Logo.jpg"/>
+    <div id="iconNselect">
+        <i class="fa-solid fa-globe"></i>
+        
+        <select value="English" multiple >
+            <option>English</option>
+        </select>
+    </div>
+</div>
+<div id="country">
+    <a>Australia</a>
+    <a>Brazil</a>
+    <a>Canada</a>
+    <a>China</a>
+    <a>France</a>
+    <a>Germany</a>
+    <a>Italy</a>
+    <a>Japan</a>
+    <a>Mexico</a>
+    <a>Netherlands</a>
+    <a>Poland</a>
+    <a>Singapore</a>
+    <a>Spain</a>
+    <a>Turkey</a>
+    <a>United Arab Emirates</a>
+    <a>United Kingdom</a>
+    <a>United States</a>
+</div>
+        </div>
+    </div>
+</footer>
 
 </html>
